GNOME Bugzilla – Bug 760177
Fix non-literal format string warning for clang
Last modified: 2016-01-10 09:42:52 UTC
This error message shows when compiling libgxps with clang: gxps-images.c:619:34: error: format string is not a string literal [-Werror,-Wformat-nonliteral] _tiff_error = g_strdup_vprintf (fmt, ap); ^~~ 1 error generated. Please see the patch. This can be easily fixed by using G_GNUC_PRINTF.
Created attachment 318279 [details] [review] gxps-images: Fix non-literal format string warning for clang
Comment on attachment 318279 [details] [review] gxps-images: Fix non-literal format string warning for clang Pushed, thank you!