gxps-images: Fix non-literal format string warning for clang

https://bugzilla.gnome.org/show_bug.cgi?id=760177